--- a/index.html
+++ b/index.html
@@ -14,27 +14,33 @@
     <title> R. Elias (for lack of a better name)</title>
 
     <style>
-
-        body
-          {
-            background-color: purple;
-            color: red;
-            margin: 3%;
-          }
-        a
-          {
-            color: #F08080;
-            text-decoration: underline;
-          }
-        a:hover
-          {
-            color: #FFC0CB;
-          }
-        img
-          {
-            border: 1px solid #FF0000;
-            border-radius: 3px;
-          }
+      html
+        {
+          background-color: #800080;
+          margin: 0;
+          padding: 0;
+          height: 100%;
+        }
+      body
+        {
+          background-color: #800080;
+          color: red;
+          margin: 3%;
+        }
+      a
+        {
+          color: #F08080;
+          text-decoration: underline;
+        }
+      a:hover
+        {
+          color: #FFC0CB;
+        }
+      img
+        {
+          border: 1px solid #FF0000;
+          border-radius: 3px;
+        }
 
     </style>
 
