--- a/htmldawg.html
+++ b/htmldawg.html
@@ -7,6 +7,13 @@
 
     <style>
 
+    html
+      {
+        background-color: #191970; 
+        margin: 0;
+        padding: 0;
+        height: 100%;
+      }
      body
        {
          background-color: #191970;
