--- a/htmldawg.html
+++ b/htmldawg.html
@@ -3,13 +3,15 @@
 
   <head>
 
+    <meta name="color-scheme" content="light">
+
     <title> This is webpage!!!1!!1!!111!!!!1!1 </title>
 
     <style>
 
     html
       {
-        background-color: #191970; 
+        background-color: #191970;
         margin: 0;
         padding: 0;
         height: 100%;
