--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   <head>
 
+    <meta name="color-scheme" content="light">
+
     <title> R. Elias (for lack of a better name)</title>
 
     <style>
