--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
   <head>
 
-    <meta name="color-scheme" content="light">
-
     <title> R. Elias (for lack of a better name)</title>
 
     <style>
+
+      :root 
+        {
+          color-scheme: only light;
+        }
       html
         {
           background-color: #800080;
