--- a/htmldawg.html
+++ b/htmldawg.html
@@ -3,12 +3,14 @@
 
   <head>
 
-    <meta name="color-scheme" content="light">
-
     <title> This is webpage!!!1!!1!!111!!!!1!1 </title>
 
     <style>
 
+    :root 
+      {
+        color-scheme: only light;
+      }
     html
       {
         background-color: #191970;
