--- a/htmldawg.html
+++ b/htmldawg.html
@@ -7,21 +7,22 @@
 
     <style>
 
-    :root 
+    :root
       {
-        color-scheme: only light;
+        color-scheme: light;
       }
     html
       {
-        background-color: #191970;
+        internal-light-dark-color-scheme: light !important;
+        background-color: #191970 !important;
         margin: 0;
         padding: 0;
         height: 100%;
       }
      body
        {
-         background-color: #191970;
-         color: #27348B;
+         background-color: #191970 !importan;
+         color: #27348B !important;
          margin: 3%;
        }
      a
