--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@
 
     <style>
 
-      :root 
+      :root
         {
-          color-scheme: only light;
+          color-scheme: light;
         }
       html
         {
-          background-color: #800080;
+          internal-light-dark-color-scheme: light !important;
+          background-color: #800080 !important;
           margin: 0;
           padding: 0;
           height: 100%;
         }
       body
         {
-          background-color: #800080;
-          color: red;
+          background-color: #800080 !important;
+          color: red !important;
           margin: 3%;
         }
       a
