--- a/index.html
+++ b/index.html
@@ -15,23 +15,10 @@
 
     <style>
 
-      :root
-        {
-          color-scheme: light;
-        }
-      html
-        {
-          internal-light-dark-color-scheme: light !important;
-          background-color: #800080 !important;
-          margin: 0;
-          padding: 0;
-          height: 100%;
-        }
       body
         {
-          background-color: #800080 !important;
-          color: red !important;
-          margin: 3%;
+          background-color: #800080
+          color: #FF00000
         }
       a
         {
