--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
       body
         {
-          background-color: #800080
-          color: #FF00000
+          background-color: #800080;
+          color: #FF00000;
         }
       a
         {
