--- a/htmldawg.html
+++ b/htmldawg.html
@@ -7,22 +7,10 @@
 
     <style>
 
-    :root
-      {
-        color-scheme: light;
-      }
-    html
-      {
-        internal-light-dark-color-scheme: light !important;
-        background-color: #191970 !important;
-        margin: 0;
-        padding: 0;
-        height: 100%;
-      }
      body
        {
-         background-color: #191970 !importan;
-         color: #27348B !important;
+         background-color: #191970;
+         color: #27348B;
          margin: 3%;
        }
      a
