--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       body
         {
           background-color: #800080;
-          color: #FF00000;
+          color: #FF0000;
           margin: 3%;
         }
       a
