--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
         <br>
         is in any way what-so-fucking-ever an acceptable type of politics.
         <br>
+        Stay in love with technology despite the bastards.
+        <br>
         So ... yea, I guess that was summed up in the first line.
       </p>
       <br>
