--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <br>
         is in any way what-so-fucking-ever an acceptable type of politics.
         <br>
-        Stay in love with technology despite the bastards.
+        Stay in love with technology despite (or to spite?) the bastards.
         <br>
         So ... yea, I guess that was summed up in the first line.
       </p>
