--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <br>
         Don't entirely jelly the spine I'd grown in my youth.
         <br>
-        Try to discover a will to create again in the face of world that would be happy to grind me into pink paste.
+        Try to discover a will to create again in the face of a world that would be happy to grind me into pink paste.
         <br>
         Keep learning, keep engaging, keep maintining opposition, keep considering the humanity in the stories of others.
         <br>
