--- a/index.html
+++ b/index.html
@@ -60,17 +60,19 @@
         <br>
         Keep learning, keep engaging, keep maintining opposition, keep considering the humanity in the stories of others.
         <br>
+        Find new  music.
+        <br>
         Never ever belly up to power players.
         <br>
         Never say that a politics built out of disintegrating the lived experience of every person,
         <br>
         built out of systematizing away the things that make life absolutely alive,
         <br>
-        that makes emotions expressed, expressive, and informative,
+        that makes emotions expressed, expressive, and informative ...
         <br>
-        is in any way what-so-fucking-ever an acceptable type of politics.
+        That this could in any way what-so-fucking-ever be an acceptable type of politics.
         <br>
-        Stay in love with technology despite (or to spite?) the bastards.
+        Also, stay in love with technology despite (or to spite?) the bastards.
         <br>
         So ... yea, I guess that was summed up in the first line.
       </p>
