--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <br>
         that makes emotions expressed, expressive, and informative ...
         <br>
-        That this could in any way what-so-fucking-ever be an acceptable type of politics.
+        could in any way what-so-fucking-ever be an acceptable type of politics.
         <br>
         Also, stay in love with technology despite (or to spite?) the bastards.
         <br>
