--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
           border: 1px solid #FF0000;
           border-radius: 3px;
         }
+      h1 { margin-left: 0; }
+      p { margin-left: 20px; margin-top: 0; margin-bottom: 0; }
 
     </style>
 
@@ -45,7 +47,7 @@
   <body>
       <h1> R. Elias </h1>
       <br>
-      <img src = "headshot.png" alt="Shot in the Head">
+      <img src = "headshot.png" alt="Shot in the Head" style="margin-left: 20px; display: block;">
       <br>
       <br>
       <h2> Statement: </h2>
