--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <br>
         Keep learning, keep engaging, keep maintining opposition, keep considering the humanity in the stories of others.
         <br>
-        Find new  music.
+        Always find new music.
         <br>
         Never ever belly up to power players.
         <br>
@@ -70,7 +70,9 @@
         <br>
         built out of systematizing away the things that make life absolutely alive,
         <br>
-        that makes emotions expressed, expressive, and informative ...
+        built out of negating what make emotions expressed, expressive, and informative,
+        <br>
+        built out of dehumanization as a default setting ...
         <br>
         could in any way what-so-fucking-ever be an acceptable type of politics.
         <br>
