--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <br>
         built out of dehumanization as a default setting ...
         <br>
-        could in any way what-so-fucking-ever be an acceptable type of politics.
+        could in any way what-so-fucking-ever be an acceptable form of politics.
         <br>
         Also, stay in love with technology despite (or to spite?) the bastards.
         <br>
