--- a/tweakytest.html
+++ b/tweakytest.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Testing ...</title>
+    <title>Testing ... </title>
     <style>
         body { margin: 0; overflow: hidden; background: #000; font-family: monospace; }
         canvas { display: block; }
@@ -13,7 +13,8 @@
             left: 50%;
             transform: translate(-50%, -50%);
             color: #fff;
-            font-size: 18px;
+            /* Size reduced: 15px is just a hair larger than the 13px glitch */
+            font-size: 15px;
             font-weight: bold;
             text-decoration: none;
             z-index: 999;
@@ -21,9 +22,10 @@
             letter-spacing: 1px;
             animation: shutter 5s infinite;
             white-space: nowrap;
-            /* The "Purge" - tightly cropped black background */
+            /* Minimalist black shield - no padding, tight to the word */
             background: #000;
-            padding: 4px 8px;
+            padding: 0;
+            line-height: 1;
         }
 
         @keyframes shutter {
@@ -65,11 +67,13 @@
 
         const midX = Math.floor(cols / 2);
         const midY = Math.floor(rows / 2);
+
+        // Dead zone tightened to match the smaller font size
         const deadZone = {
-            xStart: midX - 12,
-            xEnd: midX + 12,
-            yStart: midY - 3,
-            yEnd: midY + 3
+            xStart: midX - 10,
+            xEnd: midX + 10,
+            yStart: midY - 2,
+            yEnd: midY + 2
         };
 
         const hue = (frame * 0.5) % 360;
