--- a/htmldawg.html
+++ b/htmldawg.html
@@ -10,7 +10,12 @@
      body
        {
          background-color: #191970;
-         color: #27348B;
+         background-image: url("IMG_0029.png");
+         background-position: left bottom;
+         background-repeat: no-repeat;
+         background-size: 30%;
+         background-attachment: fixed;
+         color: #FFFFFF;
          margin: 3%;
        }
      a
@@ -69,7 +74,7 @@
     </ol>
     <br>
     <br>
-    <a href = "index.html"> ... Moving Bac</a><a href = "tweakytest.html">k </a>
+    <a href = "contents.html"> ... Home </a>
 
   </body>
 
