--- a/contents.html
+++ b/contents.html
@@ -48,8 +48,8 @@
     <br>
     <div class = "project-list">
     <a href = "htmldawg.html"> HTMLDAWG Tutorials </a>
-    <a href = "ass1photo1.html"> Photo Editing Assignment 1 - First Photo </a>
-    <a href = "ass1photo2.html"> Photo Editing Assignment 1 - Seconod Photo </a>
+    <a href = "assign1photo1.html"> Photo Editing Assignment 1 - First Photo </a>
+    <a href = "assign1photo2.html"> Photo Editing Assignment 1 - Second Photo </a>
     <a href = "sontag.html"> Susan Sontag - In Plato's Cave - Reading Response </a>
     </div>
     <br><br><br>
