--- a/sontag.html
+++ b/sontag.html
@@ -2,45 +2,70 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
-
-    <title> Text Here</title>
-
+<head>
+    <title>sontag response</title>
     <style>
 
-      body
-        {
+        html, body {
           background-color: #000000;
           color: #FFFFFF;
-          margin: 3%;
-        }
-      a
-        {
-          color: #FFFFFF;
-          text-decoration: underline;
-        }
-      a:hover
-        {
-          color: #FFFFFF;
-        }
-      img
-        {
-          border: 1px solid #FF0000;
-          border-radius: 3px;
-        }
+          margin: 0;
+          padding: 0;
+          font-family: serif;
+         }
 
-      h1 { margin-left: 0; }
-      p { margin-left: 20px; margin-top: 0; margin-bottom: 0; }
+        .essay-wrapper {
+          max-width: 800px;
+          margin: 0 auto;
+          padding: 60px 20px;
+          line-height: 1.8;
+         }
+
+        h1 {
+          font-size: 2.5rem;
+          margin-bottom: 40px;
+         }
+
+        p {
+          margin-bottom: 30px;
+          font-size: 1.2rem;
+         }
+
+        a {
+          color: #FFFFFF;
+          text-decoration: none;
+          transition: text-decoration 0.2s;
+         }
+
+        a:hover {
+          text-decoration: underline;
+         }
+
 
     </style>
 
-  </head>
+</head>
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
   <body>
+    <div class = "essay-wrapper">
+      <h1> Response to Sontag's Essay "In Plato's Cave" </h1>
 
+      <p>
+        It's hard to read this essay from Sontag and not see it, in ways prophetic, but unaware of exactly how the next fifty years of media history would play out in regard to the act of capturing still or moving images as the world shifted from photography that was walled into the limitations of mechanical cameras and chemical film development into cameras in your phone with cloud storage and social media. Her core is definitely the foundation for life in an, arguably, post-digital age, or hyper-digital age of image capture and creation and image value, distribution, and engagement. It’s just extremely accelerated. The commodification of an image through the ability of the every-person photographer has reached such a degree that it can be assumed most people in any level of modern society, even if still using outdated technology, like a flip-phone, have a digital pocket camera and more than likely use it, even if it is simply to photograph their houseplants or the dinner they cooked.
+        <br><br>
+        The narrativization of the photograph also became significantly more proliferated. A single image can spawn a thousand interpretations, many with commercial backing, simply by the channels one happens to engage with that image or video on. There becomes an even larger transience to the idea of an image representing a trail marker on the path of history because the act of historizing a period can be made multiple. The ability for a single image to simultaneously receive tens if not thousands of counter images based on the fact that at any moment anybody else could be ready to record the same event from a different angle, muddies the waters of  a unified history. This is all before one factors in the complete fabrication, or extreme alterations, of imagery through advanced editing software and artificial intelligence.
+        <br><br>
+        Sontag’s essay almost acts like a photograph, itself, of a valley just before a dam break that flooded forever. The water was there you just couldn’t know it would move so aggressively. Even considering the relationship that a photograph plays in the percolation of nostalgia. The sheer amount of images of times that were, create a thousand nostalgias for things never experienced. It is almost a pseudo-nostlagia. The way things developed to cultivate the individualized-consumer in western capitalism, especially through social media, is tip-toed into in this essay but could never account for the hyper-individualization of something like instagram and the manipulation of imagery to cultivate said pseudo-nostalgia into bubbles of unique digital existences with an infinite stream of images to craft conception of reality and an infinite capacity to self-document to further galvanize that conception. The modern era of the digitized image is corporate cultivated narcissism.
+        <br><br>
+        There is a level of devaluation as well that she couldn’t have anticipated as such. She talks about photography as an "elegiac art" because it participates in a subject’s "mortality, vulnerability, mutability", it exists as a memento mori. There is likely still some truth to this on an individualized level, but when you can take a hundred selfies and upload them to a single public viewing space, can the photograph uphold that same deeper value? While you could print photos in the past, can the endless replication of digital photography libraries create the same sense of worth?
+        <br><br>
+        At the dawn of photography, in the world of the arts, it was often viewed as a heretical act. A cheap knockoff technology for grifters who couldn’t be bothered to learn to use a paintbrush. It took strategy, dedication, and time to win the photograph into a place of creative cultural prowess. Sontag sits between that moment and the current, in which the digital image could be considered a form of creative heresy again. Ephemera for a generation of people who view all things as momentary units of self-serving satiation.
+      </p>
+      <br><br><br><br><br>
       <a href = "contents.html"> Return to Contents ... </a>
+    </div>
 
   </body>
 
