--- a/contents.html
+++ b/contents.html
@@ -53,7 +53,7 @@
     <a href = "sontag.html"> Susan Sontag - In Plato's Cave - Reading Response </a>
     </div>
     <br><br><br>
-    <a href = "statement.html" class = "footer-link"> Return to Statement Page </a>
+    <a href = "index.html" class = "footer-link"> Return to Statement Page </a>
     <br>
 
   </body>
