--- a/contents.html
+++ b/contents.html
@@ -72,6 +72,7 @@
         <a href="assign2photo1.html"> Photo Editing Assignment 2 - First Photo </a>
         <a href="assign2photo2.html"> Photo Editing Assignment 2 - Second Photo </a>
         <a href="assign2photo3.html"> Photo Editing Assignment 2 - Third Photo </a>
+        <a href="assign2photo4.html"> Photo Editing Assignment 2 - Fourth Photo </a>
         <a href="malik.html"> Nesrine Malik - With AI slop distorting our reality, the world is sleepwalking into disaster - Reading Response </a>
       </div>
 
