--- a/assign1photo1.html
+++ b/assign1photo1.html
@@ -59,7 +59,7 @@
 <body>
 
     <div class="image-area">
-        <a href="contents.html">
+        <a href="assign1photo2.html">
             <img src="ass1photo1.png" alt=" ">
         </a>
     </div>
