--- a/assign2photo2.html
+++ b/assign2photo2.html
@@ -59,7 +59,7 @@
 <body>
 
     <div class="image-area">
-        <a href="contents.html">
+        <a href="assign2photo3.html">
             <img src="ass2photo2.png" alt=" ">
         </a>
     </div>
