--- a/assign2photo1.html
+++ b/assign2photo1.html
@@ -59,7 +59,7 @@
 <body>
 
     <div class="image-area">
-        <a href="contents.html">
+        <a href="assign2photo2.html">
             <img src="ass2photo1.png" alt=" ">
         </a>
     </div>
