--- a/contents.html
+++ b/contents.html
@@ -66,12 +66,9 @@
       <h3> Table of Contents: </h3>
       <div class="project-list">
         <a href="htmldawg.html"> HTMLDAWG Tutorials </a>
-        <a href="assign1photo1.html"> Photo Editing Assignment 1 - First Photo </a>
-        <a href="assign1photo2.html"> Photo Editing Assignment 1 - Second Photo </a>
+        <a href="assign1photo1.html"> Digital Photography and Editing Assignment 1</a>
         <a href="sontag.html"> Susan Sontag - In Plato's Cave - Reading Response </a>
-        <a href="assign2photo1.html"> Photo Editing Assignment 2 - First Photo </a>
-        <a href="assign2photo2.html"> Photo Editing Assignment 2 - Second Photo </a>
-        <a href="assign2photo3.html"> Photo Editing Assignment 2 - Third Photo </a>
+        <a href="assign2photo1.html"> Digital Photogrpahy and Editing Assignment 2 </a>
         <a href="malik.html"> Nesrine Malik - With AI slop distorting our reality, the world is sleepwalking into disaster - Reading Response </a>
       </div>
 
