--- a/sontag.html
+++ b/sontag.html
@@ -1,57 +1,63 @@
-
 <!doctype html>
 <html lang="en">
-
 <head>
     <title>sontag response</title>
     <style>
-
         html, body {
-          background-color: #000000;
-          color: #FFFFFF;
-          margin: 0;
-          padding: 0;
-          font-family: serif;
-         }
+            background-color: #000000;
+            color: #FFFFFF;
+            margin: 0;
+            padding: 0;
+            font-family: serif;
+        }
 
-        .essay-wrapper {
-          max-width: 800px;
-          margin: 0 auto;
-          padding: 60px 20px;
-          line-height: 1.8;
-         }
+        .title-panel {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            padding: 60px 0 20px 0;
+        }
 
         h1 {
-          font-size: 2.5rem;
-          margin-bottom: 40px;
-         }
+            font-size: 2.5rem;
+            text-align: center;
+            max-width: 90%;
+            line-height: 1.1;
+            margin: 0;
+        }
+
+        .essay-wrapper {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px 20px 60px 20px;
+            line-height: 1.8;
+        }
 
         p {
-          margin-bottom: 30px;
-          font-size: 1.2rem;
-         }
+            margin-bottom: 30px;
+            font-size: 1.2rem;
+        }
 
         a {
-          color: #FFFFFF;
-          text-decoration: none;
-          transition: text-decoration 0.2s;
-         }
+            color: #FFFFFF;
+            text-decoration: none;
+            transition: text-decoration 0.2s;
+        }
 
         a:hover {
-          text-decoration: underline;
-         }
-
-
+            text-decoration: underline;
+        }
     </style>
-
 </head>
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
   <body>
-    <div class = "essay-wrapper">
+    <header class="title-panel">
       <h1> Response to Sontag's Essay "In Plato's Cave" </h1>
+    </header>
 
+    <div class = "essay-wrapper">
       <p>
         It's hard to read this essay from Sontag and not see it, in ways prophetic, but unaware of exactly how the next fifty years of media history would play out in regard to the act of capturing still or moving images as the world shifted from photography that was walled into the limitations of mechanical cameras and chemical film development, into cameras in your phone with cloud storage and social media accounts. Her core is definitely the foundation for life in an, arguably, post-digital age, or hyper-digital age of image capture and creation and image value, distribution, and engagement. It has just been extremely accelerated. The commodification of an image through the ability of the every-person photographer has reached such a degree that it can be assumed most people in any level of modern society, even if still using outdated technology, like a flip-phone, have a digital pocket camera and more than likely use it, even if it is simply to photograph their houseplants or the dinner they cooked.
         <br><br>
