--- a/sontag.html
+++ b/sontag.html
@@ -12,14 +12,18 @@
         }
 
         .title-panel {
+            position: sticky;
+            top: 0;
+            z-index: 100;
             width: 100%;
             display: flex;
             justify-content: center;
-            padding: 60px 0 20px 0;
+            background-color: #000000;
+            padding: 20px 0;
         }
 
         h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             text-align: center;
             max-width: 90%;
             line-height: 1.1;
