--- a/malik.html
+++ b/malik.html
@@ -1,57 +1,68 @@
-
 <!doctype html>
 <html lang="en">
-
 <head>
-    <title>malik response</title>
+    <title>sontag response</title>
     <style>
-
         html, body {
-          background-color: #000000;
-          color: #FFFFFF;
-          margin: 0;
-          padding: 0;
-          font-family: serif;
-         }
+            background-color: #000000;
+            color: #FFFFFF;
+            margin: 0;
+            padding: 0;
+            font-family: serif;
+        }
 
-        .essay-wrapper {
-          max-width: 800px;
-          margin: 0 auto;
-          padding: 60px 20px;
-          line-height: 1.8;
-         }
+        .title-panel {
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            background-color: #000000;
+            padding: 20px 0;
+        }
 
         h1 {
-          font-size: 2.5rem;
-          margin-bottom: 40px;
-         }
+            font-size: 2rem;
+            text-align: center;
+            max-width: 90%;
+            line-height: 1.1;
+            margin: 0;
+        }
+
+        .essay-wrapper {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px 20px 60px 20px;
+            line-height: 1.8;
+        }
 
         p {
-          margin-bottom: 30px;
-          font-size: 1.2rem;
-         }
+            margin-bottom: 30px;
+            font-size: 1.2rem;
+        }
 
         a {
-          color: #FFFFFF;
-          text-decoration: none;
-          transition: text-decoration 0.2s;
-         }
+            color: #FFFFFF;
+            text-decoration: none;
+            transition: text-decoration 0.2s;
+        }
 
         a:hover {
-          text-decoration: underline;
-         }
-
-
+            text-decoration: underline;
+        }
     </style>
-
 </head>
+
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
   <body>
-    <div class = "essay-wrapper">
+    <header class="title-panel">
       <h1> Response to Malik's Article "With AI slop distorting our reality, the world is sleepwalking into disaster" </h1>
+    </header>
 
+    <div class = "essay-wrapper">
       <p>
         In Nesrine Malik’s article “With AI slop distorting our reality, the world is sleepwalking into disaster”, published in the Guardian in April 2025, we are given a speedrun of the state of social media by way of the excesses provided for individualized bubble realities to maintain themselves on behalf of state and corporate apparatuses that benefit from a fractured populous and how that is made even more impenetrable courtesy of the sheer volume of semi-truthful or entirely fabricated media from artificial intelligence.
         <br><br>
