--- a/contents.html
+++ b/contents.html
@@ -68,7 +68,7 @@
         <a href="htmldawg.html"> HTMLDAWG Tutorials </a>
         <a href="assign1photo1.html"> Digital Photography and Editing Assignment 1</a>
         <a href="sontag.html"> Susan Sontag - In Plato's Cave - Reading Response </a>
-        <a href="assign2photo1.html"> Digital Photogrpahy and Editing Assignment 2 </a>
+        <a href="assign2photo1.html"> Digital Photography and Editing Assignment 2 </a>
         <a href="malik.html"> Nesrine Malik - With AI slop distorting our reality, the world is sleepwalking into disaster - Reading Response </a>
       </div>
 
