--- a/malik.html
+++ b/malik.html
@@ -43,7 +43,7 @@
         }
 
         a {
-            color: #FFFFFF;
+            color: #857A7A;
             text-decoration: none;
             transition: text-decoration 0.2s;
         }
