--- a/hiddentrack.html
+++ b/hiddentrack.html
@@ -58,7 +58,7 @@
 
 <div id="gate-container">
     <div id="gate">click to begin ...</div>
-    <div id="gate-sub">best viewed on a desktop with q fullscreen browser window, contains audio, please turn on speaker or plug in headphones</div>
+    <div id="gate-sub">best viewed on a desktop with a fullscreen browser window, contains audio, please turn on speaker or plug in headphones</div>
 </div>
 
 <a href="index.html" id="anchor">here ...</a>
