--- a/assign2photo3.html
+++ b/assign2photo3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title> assignment 1 : photo 1</title>
+    <title>assignment 2 : photo 3</title>
     <style>
         body {
           margin: 0;
@@ -9,64 +9,70 @@
           height: 100vh;
           display: flex;
           flex-direction: column;
-          background-color: #194D8C;
+          background-color: #6FA397;
           overflow: hidden;
-         }
+        }
 
         .image-area {
           flex: 1;
           display: flex;
-          justify-content: center;
-          align-items: center;
-          overflow: hidden;
-         }
+          flex-direction: row;
+        }
 
-        .image-area img {
-          max-width: 100%;
-          max-height: 100%;
-          object-fit: contain;
+        .image-link {
+          flex: 1;
           display: block;
-         }
+          text-decoration: none;
+          border: 2px solid #7D6FA3;
+          overflow: hidden;
+        }
+
+        .image-link + .image-link {
+          border-left: none;
+        }
+
+        .image-link img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          display: block;
+        }
 
         .analysis-block {
           width: 100vw;
-          background-color: #320233;
+          background-color: #95A36F;
           padding: 25px 5%;
           box-sizing: border-box;
           flex-shrink: 0;
-          border-top: 1px solid #FF0000;
+          border-top: 2px solid #7D6FA3;
         }
 
         .analysis-block p {
-          color: #FF0000;
+          color: #7D6FA3;
           margin: 0 auto;
           max-width: 1000px;
           line-height: 1.6;
           font-family: sans-serif;
-         }
-
-        a {
-          display: flex;
-          height: 100%;
-          width: 100%;
-          justify-content: center;
-          align-items: center;
-          text-decoration: none;
-         }
+        }
     </style>
 </head>
 
 <body>
 
     <div class="image-area">
-        <a href="contents.html">
-            <img src="ass2photo3.png" alt=" ">
+        <a href="contents.html" class="image-link">
+        <img src="ass2photo3_1.png" alt=" ">
+        </a>
+
+        <a href="contents.html" class="image-link">
+        <img src="ass2photo3_2.png" alt=" ">
         </a>
     </div>
 
+
     <div class="analysis-block">
         <p>
-          I wanted to continue on with the theme of the outside entity, the alien being, invading, or injecting itself into a space of assumed reference but showing extreme alterations on pieces of my memory against the condition they are currently in. I grew up on a piece of farmland that was converted into a small nine hole golf course. At times of year like now, that being February, this land was largely abandoned. It was mostly grass and forest in any direction you would look. As this area of Pennsylvania became, essentially, a suburb of New York City, more and more infrastructure built closer and closer through the woods and slowly disintegrated entire parts of the tree-line. Capital, growth, has an all-consumptive mechanism to it. It is assimilative and it isn’t particularly concerned for what it consumes or what that once may have represented as it moves in it’s own self-interest. The photos are meant to show the places that were forests in my memory and are scar-tissue now. I utilized …
+          Continuing on with the theme of the outside entity, the alien being, invading, or injecting itself into a space of assumed reference but showing extreme modifications on pieces from my memory against the condition they are currently in. I grew up on a piece of farmland that was converted into a small nine hole golf course. At times of year like now, that being February, this land was largely abandoned. It was mostly grass and forest in any direction. As this area of Pennsylvania became, essentially, a suburb of New York City, more and more infrastructure built closer and closer through the woods and slowly disintegrated entire parts of the tree-lines, the fields, the waterways. Capital, growth, has an all-consumptive mechanism to it. It is assimilative and it isn’t particularly concerned for what it consumes or what that once may have represented as it moves forward in it’s own self-interest. The photos are meant to show the places that were forests in my memory and are scar-tissue now. I tried to make the photos more subtle in their alien-ness, all of them with things that shouldn’t be there according to how I remembered these places, whether it shows something in the foreground or background. All including at least one piece of manmade detritus on an otherwise natural environment. All of which also subjected to digital manipulation alongside their raw digital capture.
         </p>
     </div>
 
