--- a/malik.html
+++ b/malik.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>sontag response</title>
+    <title>malik response</title>
     <style>
         html, body {
             background-color: #000000;
