--- a/contents.html
+++ b/contents.html
@@ -70,6 +70,7 @@
         <a href="sontag.html"> Susan Sontag - In Plato's Cave - Reading Response </a>
         <a href="assign2photo1.html"> Digital Photography and Editing Assignment 2 </a>
         <a href="malik.html"> Nesrine Malik - With AI slop distorting our reality, the world is sleepwalking into disaster - Reading Response </a>
+        <a href="parenthogenesis.html"> Collage and Photo-montage Editing Assignment </a>
       </div>
 
       <br><br><br>
