--- a/contents.html
+++ b/contents.html
@@ -69,7 +69,7 @@
         <a href="assign1photo1.html"> Digital Photography and Editing Assignment 1</a>
         <a href="sontag.html"> Susan Sontag - In Plato's Cave - Reading Response </a>
         <a href="assign2photo1.html"> Digital Photography and Editing Assignment 2 </a>
-        <a href="malik.html"> Nesrine Malik - With AI slop distorting our reality, the world is sleepwalking into disaster - Reading Response </a>
+        <a href="malik.html"> Nesrine Malik - With AI Slop Distorting Our Reality, The World Is Sleepwalking Into Disaster - Reading Response </a>
         <a href="parthenogenesis.html"> Collage and Photo-Montage Editing Assignment </a>
       </div>
 
