--- a/contents.html
+++ b/contents.html
@@ -70,7 +70,7 @@
         <a href="sontag.html"> Susan Sontag - In Plato's Cave - Reading Response </a>
         <a href="assign2photo1.html"> Digital Photography and Editing Assignment 2 </a>
         <a href="malik.html"> Nesrine Malik - With AI Slop Distorting Our Reality, The World Is Sleepwalking Into Disaster - Reading Response </a>
-        <a href="parthenogenesis.html"> Collage and Photo-Montage Editing Assignment </a>
+        <a href="parthenogenesis.html"> Digital Collage and Photo-Montage Editing Assignment </a>
       </div>
 
       <br><br><br>
